<resources>
    <string name="app_name">Refresh</string>
    <string name="activity_menu">Menu</string>
    <string name="activity_easy">Easy</string>
    <string name="activity_hardcore">Hardcore</string>
    <string name="easy">Easy</string>
    <string name="refresh">Refresh</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="empty"> </string>
</resources>