<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hardcoreColor"
    tools:context=".hardcore">

    <Button
        android:id="@+id/one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/one"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSpace" />

    <Button
        android:id="@+id/three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/three"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSpace" />

    <Button
        android:id="@+id/four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/four"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/seven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/seven"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/botSpace"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/five"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/six"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/six"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/eight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/eight"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/botSpace"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/seven" />

    <Button
        android:id="@+id/nine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/empty"
        android:textColor="@color/hardcoreColor"
        app:layout_constraintBottom_toTopOf="@+id/botSpace"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:onClick="buttonClick"
        android:text="@string/two"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/topSpace" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="239dp"
        android:layout_height="94dp"
        android:layout_marginBottom="40dp"
        android:background="@color/backgroundColor"
        android:onClick="refreshClick"
        android:text="@string/refresh"
        android:textColor="@color/hardcoreColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/botSpace"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginBottom="255dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="188dp"
        android:layout_height="71dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botSpace"
        app:layout_constraintVertical_bias="0.361" />

    <Space
        android:id="@+id/topSpace"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>